[package]
name = "pgident"
version = "0.0.3"
edition = "2021"

license = "MIT"
description = "A library for escaping and quoting Postgres identifiers/names"
homepage = "https://github.com/stestagg/pgident"
repository = "https://github.com/stestagg/pgident"
readme = "README.md"

keywords = ["postgres", "sql", "database", "escape", "quote"]
categories = ["database", "encoding"]


[dependencies]
thiserror = "1.0"
